Improved accuracy score by changing model composition

--- a/online_review_classification.ipynb
+++ b/online_review_classification.ipynb
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Mtqx0wqqyhDr",
-        "outputId": "107a1db2-97cf-4e56-99d1-c9faed1da271"
+        "outputId": "7babe1ba-c0b2-42fc-a093-c7b4867abb08"
       },
       "outputs": [
         {
@@ -41,9 +41,9 @@
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+            "[nltk_data]   Package stopwords is already up-to-date!\n"
           ]
         },
         {
@@ -100,7 +100,7 @@
       "metadata": {
         "id": "H00p8Qpu3onz"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -120,7 +120,7 @@
       "metadata": {
         "id": "NhkgyOtT4Fd0"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -162,7 +162,7 @@
       "metadata": {
         "id": "s1TFt8v7HQcA"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -186,27 +186,10 @@
         "dataset['Summary'] = dataset['Summary'].apply(lambda x : process_sentence(x))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "N7y_un_u_JRZ",
-        "outputId": "2190dc5d-faa8-43d4-e7b0-2286be2f5f12"
+        "id": "N7y_un_u_JRZ"
       },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-6-105647d671c9>:2: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  dataset['label'] = le.fit_transform(df['Sentiment'])\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -233,7 +216,7 @@
       "metadata": {
         "id": "xSXwiwG65kFp"
       },
-      "execution_count": 50,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -287,18 +270,17 @@
       "metadata": {
         "id": "wrJYedsoAYNo"
       },
-      "execution_count": 40,
+      "execution_count": 32,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Create model\n",
-        "inputs = layers.Input((1, ), dtype='string')\n",
+        "inputs = tf.keras.layers.Input(shape=(1,), dtype='string')\n",
         "x = text_vectorizer(inputs)\n",
         "x = embedding(x)\n",
         "x = layers.LSTM(64)(x)\n",
-        "x =\n",
         "outputs = layers.Dense(3, activation='softmax')(x)\n",
         "model = tf.keras.Model(inputs, outputs, name=\"review_sentiment_analysis\")\n",
         "\n",
@@ -318,34 +300,34 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zmWGrjGZQEy6",
-        "outputId": "23460037-52ae-4b6c-cf7e-27d11066d749"
+        "outputId": "97f4ba05-3ca6-4f91-d038-ebe19f271f46"
       },
-      "execution_count": 56,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/10\n",
-            "5127/5127 [==============================] - 87s 16ms/step - loss: 0.2281 - accuracy: 0.9292 - val_loss: 0.2638 - val_accuracy: 0.9192\n",
+            "5127/5127 [==============================] - 70s 13ms/step - loss: 0.2927 - accuracy: 0.9072 - val_loss: 0.2535 - val_accuracy: 0.9213\n",
             "Epoch 2/10\n",
-            "5127/5127 [==============================] - 60s 12ms/step - loss: 0.1802 - accuracy: 0.9416 - val_loss: 0.2705 - val_accuracy: 0.9170\n",
+            "5127/5127 [==============================] - 44s 9ms/step - loss: 0.2375 - accuracy: 0.9237 - val_loss: 0.2377 - val_accuracy: 0.9239\n",
             "Epoch 3/10\n",
-            "5127/5127 [==============================] - 56s 11ms/step - loss: 0.1657 - accuracy: 0.9469 - val_loss: 0.2797 - val_accuracy: 0.9184\n",
+            "5127/5127 [==============================] - 44s 8ms/step - loss: 0.2137 - accuracy: 0.9301 - val_loss: 0.2333 - val_accuracy: 0.9232\n",
             "Epoch 4/10\n",
-            "5127/5127 [==============================] - 56s 11ms/step - loss: 0.1560 - accuracy: 0.9498 - val_loss: 0.2991 - val_accuracy: 0.9159\n",
+            "5127/5127 [==============================] - 43s 8ms/step - loss: 0.1973 - accuracy: 0.9343 - val_loss: 0.2416 - val_accuracy: 0.9234\n",
             "Epoch 5/10\n",
-            "5127/5127 [==============================] - 67s 13ms/step - loss: 0.1500 - accuracy: 0.9517 - val_loss: 0.3033 - val_accuracy: 0.9167\n",
+            "5127/5127 [==============================] - 43s 8ms/step - loss: 0.1841 - accuracy: 0.9393 - val_loss: 0.2486 - val_accuracy: 0.9205\n",
             "Epoch 6/10\n",
-            "5127/5127 [==============================] - 67s 13ms/step - loss: 0.1434 - accuracy: 0.9539 - val_loss: 0.3220 - val_accuracy: 0.9144\n",
+            "5127/5127 [==============================] - 44s 9ms/step - loss: 0.1722 - accuracy: 0.9433 - val_loss: 0.2567 - val_accuracy: 0.9211\n",
             "Epoch 7/10\n",
-            "5127/5127 [==============================] - 63s 12ms/step - loss: 0.1393 - accuracy: 0.9553 - val_loss: 0.3170 - val_accuracy: 0.9141\n",
+            "5127/5127 [==============================] - 42s 8ms/step - loss: 0.1626 - accuracy: 0.9462 - val_loss: 0.2666 - val_accuracy: 0.9216\n",
             "Epoch 8/10\n",
-            "5127/5127 [==============================] - 62s 12ms/step - loss: 0.1349 - accuracy: 0.9567 - val_loss: 0.3266 - val_accuracy: 0.9187\n",
+            "5127/5127 [==============================] - 43s 8ms/step - loss: 0.1537 - accuracy: 0.9497 - val_loss: 0.2799 - val_accuracy: 0.9165\n",
             "Epoch 9/10\n",
-            "5127/5127 [==============================] - 62s 12ms/step - loss: 0.1318 - accuracy: 0.9574 - val_loss: 0.3358 - val_accuracy: 0.9136\n",
+            "5127/5127 [==============================] - 42s 8ms/step - loss: 0.1472 - accuracy: 0.9519 - val_loss: 0.2873 - val_accuracy: 0.9207\n",
             "Epoch 10/10\n",
-            "5127/5127 [==============================] - 58s 11ms/step - loss: 0.1290 - accuracy: 0.9583 - val_loss: 0.3612 - val_accuracy: 0.9135\n"
+            "5127/5127 [==============================] - 47s 9ms/step - loss: 0.1410 - accuracy: 0.9540 - val_loss: 0.2952 - val_accuracy: 0.9187\n"
           ]
         }
       ]
@@ -369,26 +351,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hX92q3Lq_PTs",
-        "outputId": "08458872-0255-441a-c7b5-27c6fb939381"
+        "outputId": "409141ba-a2a4-4666-9a51-1188d54bfde2"
       },
-      "execution_count": 57,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "641/641 [==============================] - 4s 6ms/step - loss: 0.3605 - accuracy: 0.9110\n"
+            "641/641 [==============================] - 3s 4ms/step - loss: 0.3136 - accuracy: 0.9148\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.36045315861701965, 0.9110016822814941]"
+              "[0.31364279985427856, 0.9148054122924805]"
             ]
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 35
         }
       ]
     },
@@ -417,7 +399,7 @@
       "metadata": {
         "id": "9_Vy72kzgU0o"
       },
-      "execution_count": 77,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -425,39 +407,39 @@
       "source": [
         "sent = [\n",
         "    \"Wow!!! Its the very first word that i said as i put on this headset. Amazing Product, and Delivery time was also great.\",\n",
+        "    \"Please take back product because of not working properly.\",\n",
         "    \"An amazing experience. Never seen never dreamt experiences. A worthy entertainer. Cost could have been more affordable.\",\n",
         "    \"It was a pretty decent set up & fun to play games on as well.\",\n",
-        "    \"Item is defective. Contacted the customer service number and email provided by the Amazon customer service.\",\n",
-        "    \"Please take back product because of not working properly.\"\n",
+        "    \"Useless item!\"\n",
         "    ]\n",
         "\n",
         "predict_sentiment(model, sent)"
       ],
       "metadata": {
+        "id": "n_B8BV8vWDTd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "n_B8BV8vWDTd",
-        "outputId": "d6f87606-cc5b-4cd3-e14d-f826a3784b0c"
+        "outputId": "6fd2197d-687b-480a-df68-23d9bf1948f2"
       },
-      "execution_count": 78,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 39ms/step\n"
+            "1/1 [==============================] - 0s 36ms/step\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['positive', 'neutral', 'positive', 'negative', 'negative']"
+              "['positive', 'negative', 'positive', 'positive', 'negative']"
             ]
           },
           "metadata": {},
-          "execution_count": 78
+          "execution_count": 39
         }
       ]
     }
